ДЗ, тесты JUnit заваливаются